<resources>
    <string name="app_name">WC\'s Microcontroller</string>

    <string name="service_device_label">设备发现服务</string>
    <string name="service_device_description">用于发现您的物联网设备, 停止运行后将不能发现设备</string>

    <string name="permission_reason">我们需要以下权限才能正常工作，我们承诺不会收集您的隐私，而且本应用开源，欢迎您的监督</string>
    <string name="permission_failed">您拒绝授予了一些权限，请在应用程序设置中手动授予权限</string>
    <string name="permission_ok">所有权限都已允许，感谢您的理解与支持</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="nav_header_title">wc的小玩具</string>
    <string name="nav_header_subtitle">1132694623@qq.com</string>

    <string name="menu_home">Home</string>
    <string name="menu_rgblight">RGBLight</string>
    <string name="menu_mcs">Mini Chat Server</string>
    <string name="menu_debug">Debug</string>
    <string name="menu_scan">Scan Devices</string>

    <string name="home_hello1">你好，%s</string>
    <string name="home_hello2">欢迎回来，%s</string>
    <string name="home_devices_title">设备状况</string>
    <string name="home_devices_count">已连接设备数：%d/%d</string>
    <string name="home_devices_find">发现新设备数：%d</string>

    <string name="dialog_connect_device">连接设备</string>

    <string name="device_name">设备名称: %s</string>
    <string name="device_address">地址: %s</string>
    <string name="device_id">序列号: %s</string>
    <string name="device_model">型号: %s</string>
    <string name="device_version">固件版本: %s</string>
    <string name="device_producer">制造商: %s</string>

    <string name="device_name_unknown">未知设备</string>
    <string name="device_id_unknown">未知序列号</string>
    <string name="device_model_unknown">未知型号</string>
    <string name="device_version_unknown">未知版本</string>
    <string name="device_producer_unknown">未知厂商</string>

    <string name="unauth">请登录</string>

</resources>
